fix: Fixes issue with double scroll bar.

--- a/src/app/App.scss
+++ b/src/app/App.scss
@@ -206,3 +206,7 @@
   border-bottom: 1px solid var(--pf-c-select__toggle--before--BorderBottomColor);
   border-left: 1px solid var(--pf-c-select__toggle--before--BorderLeftColor);
 }
+
+.applicationServices {
+  overflow: hidden;
+}
